--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,6 +77,7 @@ button {
     outline: 0;
 }
 img {
+    display: block;
     width: 100%;
     height: auto;
     border: 0;
@@ -488,137 +489,13 @@ a, a:visited {
 
 // ****** MODULES ****** //
 
-//MEDIA BLOCKS
-.media-block-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-row-gap: 30px;
-  margin-top: 42px;
-}
-.media-block {
-  @include background-colors;
-  @include text-colors;
-  @include gradient-overlay('media-block-small-bg.jpg');
-  color: $white;
-  font-weight: 700;
-  grid-template-columns: 1fr;
-  width: calc(60vw - 10px);
-  height: 25vh;
-  justify-self: center;
-  position: relative;
 
-
-  .media-block-eyebrow,
-  .media-block-title,
-  .media-block-cta {
-    position: absolute;
-    left: 10px;
-  }
-
-  .media-block-eyebrow,
-  .media-block-cta, {
-    @include background-colors;
-  }
-
-  .media-block-eyebrow {
-    font-size: .8rem;
-    padding: .3rem .6rem;
-    top: 15px;
-  }
-
-  .media-block-title {
-    font-size: .9rem;
-    bottom: 55px;
-  }
-
-  .media-block-cta {
-    text-transform: uppercase;
-    font-size: .8em;
-    bottom: 20px;
-    padding: .5rem;
-    color: #fff;
-
-
-    a, a:visited, a:focus {
-      color: inherit;
-    }
-  }
-  &.med {
-    @include gradient-overlay('media-block-med-bg.jpg');
-    width: calc(100vw - 10px);
-    max-width: 390px;
-    height: 25vh;
-
-    .media-block-eyebrow {
-      top: -21px;
-      left: 0;
-      right: 0;
-    }
-
-    .media-block-title {
-      font-size: 1rem;
-      padding-right: 6rem;
-    }
-  }
-}
-
-.featured-section-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 100%;
-    height: 100%;
-
-  .featured-section {
-    @include gradient-overlay('media-block-large-bg.jpg');
-      color: $white;
-      font-weight: 700;
-      background-size: cover;
-      width: calc(100vw - 10px);
-      height: 40vh;
-      max-width: 1024px;
-      max-height: 570px;
-      position: relative;
-
-      .featured-section-eyebrow,
-      .featured-section-title,
-      .featured-section-cta {
-        position: absolute;
-        left: 10px;
-      }
-
-
-     .featured-section-eyebrow,
-     .featured-section-cta, {
-       @include background-colors;
-     }
-
-     .featured-section-eyebrow {
-       @include background-colors;
-        bottom: 150px;
-        left: 10px;
-        padding: .25rem .5rem;
-     }
-     .featured-section-title {
-       font-size: 1.4rem;
-       max-width: 75%;
-       bottom: 80px;
-     }
-     .featured-section-cta {
-       @include background-colors;
-       display: inline-block;
-       text-transform: uppercase;
-       padding: .5rem 1rem;
-       bottom: 40px;
-
-
-       a:visited, a:focus {
-         color: $white;
-       }
-     }
-  }
-}
 
 @include tablet {
+.media-block-container  {
+
+}
+
 .featured-section-container {
   .featured-section {
 
@@ -633,6 +510,7 @@ a, a:visited {
 //SIDEBAR HEADER
 .sidebar-header {
   border-bottom: 5px solid $red;
+  margin-bottom: 1rem;
 }
 
 // SIDEBAR WIDGET
@@ -794,12 +672,12 @@ form {
  CSS GRID LAYOUT FOR MODERN BROWSERS
 -----------------------------------------*/
 
-@supports(grid-area: auto) {
+//@supports(grid-area: auto) {
   .page {
     max-width: none;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto 50px;
+    grid-template-rows: 530px auto 100px;
     grid-row-gap: 10px;
     grid-template-areas:
                       "header"
@@ -807,12 +685,11 @@ form {
                       "footer"
   }
   .header {
-   background: darken(chocolate, 15%);
    grid-area: header;
 
     .site-logo {
       max-width: 200px;
-      margin: 0 auto;
+      margin: .4em auto;
     }
 
     .hero-unit {
@@ -856,24 +733,37 @@ form {
   }
 
   .main {
-    background: $blue;
     grid-area: main;
     grid-column: 1 / 2;
     grid-row: auto;
   }
   .sidebar {
-    background: coral;
     grid-area: sidebar;
     grid-column: 1 / 2;
     grid-row: auto;
   }
 
   .footer {
-    background: green;
+    background: $red;
+    color: $white;
     grid-area: footer;
-  }
 
-}
+    .copyright {
+      font-size: .8rem;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    .footer-social-media-icons {
+     display: flex;
+     max-width: 180px;
+     margin: 0 auto;
+     justify-content: space-between;
+      .footer-icon img {
+        max-width: 32px;
+      }
+    }
+  }
+// } end @support  TODO: doesn't work for tablet fix issue
 
 /*------------------------
  TABLETS and MED DEVICES
@@ -883,7 +773,6 @@ form {
     // background: lime;
     grid-row-gap: $layout-grid-row-gap;
   }
-
 
   .content {
     grid-template-columns: 75% 25%;
@@ -898,8 +787,7 @@ form {
     grid-column: 2 / 3;
     grid-row: 1 / 2 ;
   }
-  .footer: {
-    display: grid;
+  .footer {
   }
 }
 
